# policy-pilot-hackrx6

./: .gitignore  API.md  ARCHITECTURE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  EXAMPLES.md  GITHUB_READY_CHECKLIST.md  LICENSE  PROJECT_COMPLETION.md  QUICK_REFERENCE.md  README.md  SETUP.md  TROUBLESHOOTING.md  chatbot.py  pyproject.toml  requirements.txt  test_integration.py  web_app.py
.github/workflows/: tests.yml
static/: styles.css
templates/: index.html
tests/: test_chatbot.py
